--- a/app/index.html
+++ b/app/index.html
@@ -1,13 +1,15 @@
 <!DOCTYPE html>
 <html>
-<head>
-    <meta charset="UTF-8">
-    <title>Electron Skeleton App</title>
-</head>
-<body>
-    <h1>Electron Skeleton App</h1>
-<script>
+    <head>
+        <meta charset="UTF-8">
+        <title>Electron Skeleton App</title>
+        <link rel="stylesheet" href="style.css" />
+    </head>
+    <body>
+        <h1>Electron Skeleton App</h1>
 
-</script>
-</body>
+        <script>
+            require("./renderer");
+        </script>
+    </body>
 </html>
